profiling-using-exp-runner/backup_FINAL_RESULTS/floyd_experiment/run_2_repetition_0/energibridge.log
sampling interval: 200, target function: floyd_warshall_lru_cache, input size: ((0.0, 3.0, inf, 7.0, 8.0, 3.0, 2.0, inf), (3.0, 0.0, 4.0, 2.0, inf, inf, 1.0, 5.0), (inf, 4.0, 0.0, 2.0, 1.0, inf, 6.0, inf), (7.0, 2.0, 2.0, 0.0, 4.0, 3.0, 2.0, 8.0), (8.0, inf, 1.0, 4.0, 0.0, 3.0, 5.0, 6.0), (3.0, 5.0, inf, 3.0, 5.0, 0.0, inf, 2.0), (2.0, 1.0, 5.0, 6.0, 3.0, inf, 0.0, 7.0), (inf, 5.0, inf, 8.0, 6.0, 2.0, 7.0, 0.0))
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import memory.floyd as module; graph_tuple = ((0.0, 3.0, inf, 7.0, 8.0, 3.0, 2.0, inf), (3.0, 0.0, 4.0, 2.0, inf, inf, 1.0, 5.0), (inf, 4.0, 0.0, 2.0, 1.0, inf, 6.0, inf), (7.0, 2.0, 2.0, 0.0, 4.0, 3.0, 2.0, 8.0), (8.0, inf, 1.0, 4.0, 0.0, 3.0, 5.0, 6.0), (3.0, 5.0, inf, 3.0, 5.0, 0.0, inf, 2.0), (2.0, 1.0, 5.0, 6.0, 3.0, inf, 0.0, 7.0), (inf, 5.0, inf, 8.0, 6.0, 2.0, 7.0, 0.0)); module.floyd_warshall_lru_cache(graph_tuple); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.174482948303222 for 0.23189133 sec of execution.
